<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/colorbg"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center">


                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/colorbg"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                android:hint="@string/et_name_hint">

            </EditText>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                android:hint="@string/et_email_hint">

            </EditText>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                android:hint="@string/et_password_hint">

            </EditText>

            <EditText
                android:id="@+id/et_jabatan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                android:hint="@string/et_jabatan_hint">

            </EditText>

            <EditText
                android:id="@+id/hak_akses"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                android:hint="@string/et_hakakses_hint">

            </EditText>

            <EditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                android:hint="@string/et_alamat_hint">

            </EditText>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>